// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt List default 1`] = `
<ul class="e-bolt-list">
  This is a list
</ul>
`;

exports[`Bolt List prop - display: horizontal 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - display: horizontal@medium 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - display: horizontal@small 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - display: horizontal@xsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - display: horizontal@xxsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - display: vertical 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - full width option: false 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - full width option: true 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - horizontal align: center 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="center"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-center c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-center c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - horizontal align: end 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="end"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-end c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-end c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - horizontal align: justify 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="justify"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-justify c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-justify c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - horizontal align: start 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - inset: false 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - inset: true 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
           inset
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center c-bolt-list--inset"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--inset"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--inset"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item c-bolt-list-item--inset"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - no wrapping: false 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - no wrapping: true 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
           nowrap
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center c-bolt-list--nowrap"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - separator: dashed 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="dashed"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-dashed c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-dashed c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - separator: none 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - separator: solid 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="solid"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--separator-solid c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--separator-solid c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: large 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="large"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-large c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-large c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: medium 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="medium"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-medium c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-medium c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: none 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="none"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: small 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="small"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-small c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-small c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: xlarge 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xlarge"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xlarge c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xlarge c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: xsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - spacing: xxsmall 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xxsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xxsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xxsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - tag: ol 1`] = `
<bolt-list tag="ol"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - tag: ul 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - vertical align: center 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="center"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-center"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - vertical align: end 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="end"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-end"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;

exports[`Bolt List prop - vertical align: start 1`] = `
<bolt-list tag="ul"
           display="block"
           spacing="xsmall"
           separator="none"
           align="start"
           valign="start"
>
  <ssr-keep for="bolt-list"
            role="list"
            class="c-bolt-list c-bolt-list--display-block c-bolt-list--spacing-xsmall c-bolt-list--align-start c-bolt-list--valign-start"
  >
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 1
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item role="presentation">
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start"
      >
        item 2
      </ssr-keep>
    </bolt-list-item>
    <bolt-list-item last
                    role="presentation"
    >
      <ssr-keep for="bolt-list-item"
                role="listitem"
                class="c-bolt-list-item c-bolt-list-item--display-block c-bolt-list-item--spacing-xsmall c-bolt-list-item--align-start c-bolt-list-item--last-item"
      >
        item 3
      </ssr-keep>
    </bolt-list-item>
  </ssr-keep>
</bolt-list>
`;
